--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+            <version>2.0.5-beta</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
